--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ com.marco.exiftool.full.path=C:\\Program Files\\Exiftool\\exiftool.exe
 # TEST_DATE: tries to parse the dates, it log the error
 # NEW_DB: It drop and create the DB
 # SET_DATE_FROM_FILE_NAME: it sets the dates using the file name
-com.marco.mymemoriesparser.exec.modality=SET_DATE_FROM_FILE_NAME
-com.marco.mymemoriesparser.folder.to.scan=D:\\Users\\Marco\\Videos
+com.marco.mymemoriesparser.exec.modality=INSERT
+com.marco.mymemoriesparser.folder.to.scan=D:\\Users\\Marco\\Pictures
 
 #Integer size for the thumbnail
 com.marco.mymemoriesparser.thumbnail.px.height=100
